[package]
name = "ferret-rns"
version = "0.1.0"
edition = "2021"
description = "Ferret — A Rust implementation of the Reticulum Network Stack"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
rand = "0.8"
rmp-serde = "1"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "2"
bzip2 = "0.5"
socket2 = "0.5"

# Feature-gated optional dependencies
bytes = { version = "1", optional = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true }
rcgen = { version = "0.13", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
serialport = { version = "4", optional = true }
libloading = { version = "0.8", optional = true }
mio = { version = "1", optional = true }

[features]
default = ["quic", "serial"]
quic = ["dep:bytes", "dep:quinn", "dep:rustls", "dep:rcgen", "dep:tokio"]
serial = ["dep:serialport"]
plugins = ["dep:libloading"]
backbone = ["dep:mio"]

[dev-dependencies]
proptest = "1"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
